Decrease z-index | resolves #542

--- a/src/style/flatpickr.styl
+++ b/src/style/flatpickr.styl
@@ -56,7 +56,7 @@ $invertedBg = invert($calendarBackground)
     width $calendarWidth
     box-sizing border-box
     transition top $bezier 100ms
-    z-index 99999999
+    z-index 999
 
     if $noCalendarBorder is defined
         box-shadow 0 3px 13px alpha(black, 0.08)
